--- a/style.css
+++ b/style.css
@@ -16,13 +16,15 @@
     margin-right: 425px;
     font-family: 'times new roman', sans-serif;
 }
-.nav{
-    position: absolute;
+.nav, .head-container{
+    /* position: absolute; */
     width: auto;
     height: auto;
     margin-left: 200px;
     margin-right: 150px;
     margin-top: 20px;
+    /* background-color: red; */
+    margin-bottom: 100px;
 }
 .nav-links{
     color: #e5e7eb;
@@ -32,4 +34,37 @@
 }
 #link1{
     margin-left: 20px;
+}
+.awesome{
+    width: 450px;
+    float: left;
+}
+.awesome-text{
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: 800;
+}
+.awesome-p{
+    color: #e5e7eb;
+    font-size: 20px;
+}
+.signup-btn{
+    background-color: #3882f6;
+    color: #fff;
+    font-weight: 600;
+    border: 0;
+    border-radius: 10px;
+    margin-top: 4vh;
+    font-size: 18px;
+    cursor: pointer;
+    height: 40px;
+    width: 125px;
+}
+.head-img{
+    background-color: #6d747d;
+    height: 200px;
+    width: 500px;
+    margin-right: 20px;
+    float: right;
+    position: relative;
 }
