--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
 }
 
 .header{
-    position: absolute;
     background-color: #1f2937;
     height: 500px;
     width: 100%;
+    padding-top: 0.5px;
 }
 #header-logo{
     color: #f9faf8;
@@ -66,5 +66,68 @@
     width: 500px;
     margin-right: 20px;
     float: right;
-    position: relative;
+}
+.info-heading{
+    text-align: center;
+    margin-top: 30px;
+    font-size: 36px;
+    font-weight: 900;
+}
+.info-content{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    height: auto;
+    background-color: red;
+}
+.img-1{
+    /* background-color: #6d747d; */
+    height: auto;
+    width: 160px;
+    margin-right: 30px;
+    float: left;
+    margin-left: 260px;
+    padding-bottom: 120px;
+}
+.img-2{
+    /* background-color: #6d747d; */
+    height: auto;
+    width: 160px;
+    margin-right: 30px;
+    float: left;
+    margin-left: 30px;
+    padding-bottom: 120px;
+}
+.img-3{
+    /* background-color: #6d747d; */
+    height: auto;
+    width: 160px;
+    margin-right: 30px;
+    float: left;
+    margin-left: 30px;
+    padding-bottom: 120px;
+}
+.img-4{
+    /* background-color: #6d747d; */
+    height: auto;
+    width: 160px;
+    margin-right: 260px;
+    float: right;
+    margin-left: 30px;
+    padding-bottom: 120px;
+}
+.img-wrapper{
+    width: 150px;
+    height: 150px;
+    /* background-color: red; */
+    border-color:#3882f6;
+    border-radius: 20px;
+    border-width: 5px;
+    border-style: solid;
+}
+.info-text{
+    color: rgb(142, 141, 141);
+    text-align: center;
+    font-size: 18px;
+    margin-top: 10px;
 }
