--- a/style.css
+++ b/style.css
@@ -200,3 +200,17 @@
 #action-text{
     font-size: 18px;
 }
+.footer{
+    padding-top: 50px;
+}
+#footer-box{
+    background-color: #1f2937;
+    color: #fff;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+#footer-box h3{
+    text-align: center;
+    padding: 4vh 0;
+}
