--- a/style.css
+++ b/style.css
@@ -17,13 +17,11 @@
     font-family: 'times new roman', sans-serif;
 }
 .nav, .head-container{
-    /* position: absolute; */
     width: auto;
     height: auto;
     margin-left: 200px;
     margin-right: 150px;
     margin-top: 20px;
-    /* background-color: red; */
     margin-bottom: 100px;
 }
 .nav-links{
@@ -63,12 +61,9 @@
 .head-img{
     background-color: #6d747d;
     height: 200px;
-    width: 500px;
-    margin-right: 20px;
-    float: right;
-    margin-top: 10px;
+    width: 100%;
 }
-.info{
+/* .info{
     height: 400px;
 }
 .info-heading{
@@ -77,11 +72,12 @@
     font-size: 36px;
     font-weight: 900;
     margin-bottom: 30px;
-}
+} */
 .info-content{
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
+    /* margin-left: auto; */
+    /* margin-right: auto; */
+    /* margin-top: 50px; */
+    /*Margin left and right should be shorthand property*/
     height: auto;
     /* background-color: red; */
 }
@@ -89,33 +85,42 @@
     /* background-color: #6d747d; */
     height: auto;
     width: 160px;
-    margin-right: 30px;
-    float: left;
-    margin-left: 260px;
+    /* margin-right: 30px; */
+    /* float: left; */
+    /* margin-left: 260px; */
 }
 .img-2{
     /* background-color: #6d747d; */
     height: auto;
     width: 160px;
-    margin-right: 30px;
-    float: left;
-    margin-left: 30px;
+    /* margin-right: 30px; */
+    /* float: left; */
+    /* margin-left: 30px; */
 }
 .img-3{
     /* background-color: #6d747d; */
     height: auto;
     width: 160px;
-    margin-right: 30px;
+    /* margin-right: 30px;
     float: left;
-    margin-left: 30px;
+    margin-left: 30px; */
 }
 .img-4{
     /* background-color: #6d747d; */
     height: auto;
     width: 160px;
-    margin-right: 260px;
+    /* margin-right: 260px;
     float: right;
-    margin-left: 30px;
+    margin-left: 30px; */
+}
+section.info {
+    margin: 0 10em;
+}
+
+.info-content {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 .img-wrapper{
     width: 150px;
@@ -214,4 +219,35 @@
 #footer-box h3{
     text-align: center;
     padding: 4vh 0;
+}
+.head-container {
+    display: flex;
+    /* flex-wrap: wrap; */
+}
+
+.head-left {
+    width: 50%;
+    padding: 10px;
+}
+
+.head-right {
+    width: 50%;
+}
+
+.head-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.head-right {
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    padding: 10px;
+}
+
+h2.info-heading {
+    text-align: center;
+    padding: 20px 0;
 }
