--- a/style.css
+++ b/style.css
@@ -175,19 +175,13 @@ section.info {
 #action-text{
     font-size: 18px;
 }
-.footer{
-    padding-top: 50px;
-}
 #footer-box{
     background-color: #1f2937;
     color: #fff;
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-
-#footer-box h3{
-    text-align: center;
-    padding: 4vh 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 150px;
 }
 .head-container {
     display: flex;
