--- a/style.css
+++ b/style.css
@@ -5,46 +5,59 @@
 
 .header{
     background-color: #1f2937;
-    height: 500px;
+    height: auto;
     width: 100%;
     padding-top: 0.5px;
 }
+
 #header-logo{
     color: #f9faf8;
     font-size: 24px;
     font-weight: 800;
     font-family: 'times new roman', sans-serif;
 }
+
 .head-container{
     width: auto;
     height: auto;
-    margin-left: 200px;
-    margin-right: 150px;
-    margin-top: 20px;
-    margin-bottom: 100px;
+    margin: 20px 150px 100px 200px;
+    padding-bottom: 100px;
 }
+
 .nav{
     width: auto;
     height: auto;
 }
+
 .nav-links{
     color: #e5e7eb;
     font-size: 18px;
     text-decoration: none;
 }
+a#link1 {
+    padding-right: 20px;
+}
+
+a#link2 {
+    padding-right: 20px;
+}
+
 .awesome{
     width: 450px;
     float: left;
 }
+
 .awesome-text{
     font-size: 48px;
     color: #f9faf8;
     font-weight: 800;
 }
+
 .awesome-p{
     color: #e5e7eb;
     font-size: 20px;
 }
+
 .signup-btn{
     background-color: #3882f6;
     color: #fff;
@@ -57,6 +70,7 @@
     height: 40px;
     width: 125px;
 }
+
 .head-img{
     background-color: #6d747d;
     height: 200px;
@@ -66,22 +80,27 @@
 .info-content{
     height: auto;
 }
+
 .img-1{
     height: auto;
     width: 160px;
 }
+
 .img-2{
     height: auto;
     width: 160px;
 }
+
 .img-3{
     height: auto;
     width: 160px;
 }
+
 .img-4{
     height: auto;
     width: 160px;
 }
+
 section.info {
     margin: 0 10em;
     padding: 2em 0;
@@ -92,6 +111,7 @@ section.info {
     justify-content: space-between;
     flex-wrap: wrap;
 }
+
 .img-wrapper{
     width: 150px;
     height: 150px;
@@ -100,12 +120,14 @@ section.info {
     border-width: 5px;
     border-style: solid;
 }
+
 .info-text{
     color: rgb(142, 141, 141);
     text-align: center;
     font-size: 18px;
     margin-top: 10px;
 }
+
 #quote-box{
     background-color: #e5e7eb;
     padding: 100px 200px 50px 200px;
@@ -121,16 +143,19 @@ section.info {
     font-weight: 800;
     margin-left: 650px;
 }
+
 .quote{
     color: #1f2937;
     width:auto;
     height: auto;
 }
+
 .action{
     margin-top: 75px;
     width: auto;
     height: auto;
 }
+
 .action-box{
     background-color: #3882f6;
     color: #fff;
@@ -141,6 +166,7 @@ section.info {
     padding: 45px 80px;
     height: 50px;
 }
+
 .text{
     width:600px;
     float: left;
