text allignement fixed

--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ section.quote {
 
 span.quotation {
     padding-top: 100px;
-    text-align: left;
+    text-align: justify;
     font-size: 26px;
     color: #1f2937;
     font-weight: 100;
